--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         </div>
    
         <div class="pernyataan-container">
-            <p>Saya menyatakan bahwa pernyataan-pernyataan yang saya sampaikan diatas adalah benar dan dapat dipercaya. Saya memberi persetujuan kewenangan kepada lab GALAXY untuk memberikan hasil analisa dan evaluasi hasil pemeriksaan kesehatan kepada management perusahaan untuk dilakukan tindak lanjut sesuai dengan kondisi fisik dan kesehatan saya.</p>
+            <p>Saya menyatakan bahwa pernyataan-pernyataan yang saya sampaikan diatas adalah benar dan dapat dipercaya. Saya memberi persetujuan kewenangan kepada JHC untuk memberikan hasil analisa dan evaluasi hasil pemeriksaan kesehatan kepada management perusahaan untuk dilakukan tindak lanjut sesuai dengan kondisi fisik dan kesehatan saya.</p>
             <input type="checkbox" id="persetujuan" name="pernyataan_karyawan" value="Setuju" required>
             <label for="persetujuan" class="pernyataan-label">Saya menyetujui pernyataan di atas.</label>
         </div>
@@ -305,3 +305,4 @@
 </body>
 
 </html>
+
